[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cooklang"
authors = [{ name = "Alex Guinman", email = "alex@guinman.id.au" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = ["typer", "python-frontmatter", "python-slugify"]

[project.optional-dependencies]
test = ["ruff", "pytest >=2.7.3", "pytest-cov", "mypy"]

[project.urls]
Source = "https://github.com/aguinane/Cooklang"

[tool.pytest.ini_options]
addopts = "-ra --failed-first --showlocals --durations=3 --cov=cooklang"

[tool.coverage.run]
omit = ["*/version.py", '*/__main__.py']

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "N", "SIM", "UP"]
